--- a/style.css
+++ b/style.css
@@ -23,22 +23,26 @@ height: 50px;
 background-color: white;
 border: 0;
 font-size: 20px;
+border-radius: 20px;
 padding: 15px;
 height: 50px;
 width: 50px;
-transition: width 0.3s ease;
+transition: width 0.5s ease;
 }
 .btn {
 background-color: white;
+/* background-color: transparent; */
+border-radius: 50px;
+
 border: 0;
 cursor: pointer;
 font-size: 30px;
 position: absolute;
 top: 0;
-left: 0;
+left: 0px;
 height: 50px;
 width: 50px;
-transition: transform 0.3s ease;
+transition: transform 0.5s ease;
 }
 
 .btn:focus, 
@@ -50,5 +54,5 @@ outline: none;
 width: 200px;
 }
 .search.active .btn {
-transform: translateX(198px);
+transform: translateX(150px);
 }
